Adding solution to q2
- at first i was tempted to put all the suspend() calls directly in
  main(), but then i realized it would be more readable if the parsing
  was implemented using separate methods
- argh. didn't know you couldn't use string::const_iterator to
  instantiate a string in the string s(it1, it2) form. use
  string::iterator instead. still not sure why; is this because the
  implementation of string is permitted to share memory until copying is
  necessary?
- Makefile gotcha: CXXFLAGS applies to all rules, so the current
  makefile breaks q1 build...the uC++ headers/libs are included/linked
  in, and apparently they do something funky with base types that isn't
  compatible with normal C++.
- the semi-coroutine grammar doesn't exit cleanly right now; instead,
  q2.cc leans on the KEEP_SENDING state as an indication that it ==
  line.end()...i thought a bit about how to make that cleaner. the
  _Coroutine interface doesn't seem to offer explicit termination;
  instead, you need to exit main(). perhaps this could tack on the
  newline and use that as a sentinel value to signal completion of the
  line?

so many notes. i'm keeping these as a public record of my continuing
education, though, so hopefully they prove to be of use :)

--- a/a1/Makefile
+++ b/a1/Makefile
@@ -1,10 +1,32 @@
-all:	q1-orig q1
+UXX_ROOT=/home/fearlesstost/u++
+CXX=${UXX_ROOT}/bin/u++
+CXXFLAGS=-g -Wall -Wno-unused-label -MMD -I${UXX_ROOT}/u++-5.7.0/inc -L${UXX_ROOT}/u++-5.7.0/lib
+MAKEFILE_NAME=${firstword ${MAKEFILE_LIST}}
 
-q1-orig:
-	g++ -o q1-orig q1-orig.cc
+OBJECTS1=q1localglobalfixup.o
+EXEC1=localglobalfixup
 
-q1:
-	g++ -o q1 q1.cc
+OBJECTS2=q2.o
+EXEC2=postal
+
+OBJECTS=${OBJECTS_1} ${OBJECTS_2}
+DEPENDS=${OBJECTS:.o=.d}
+EXECS=${EXEC1} ${EXEC2}
+
+all: ${EXECS}
+
+q1%.o : q1%.cc
+	g++ ${CXXFLAGS} -c $< -o $@
+
+${EXEC1} : ${OBJECTS1}
+	g++ ${CXXFLAGS} $^ -o $@
+
+${EXEC2} : ${OBJECTS2}
+	${CXX} ${CXXFLAGS} $^ -o $@
+
+${OBJECTS} : ${MAKEFILE_NAME}
+
+-include ${DEPENDS}
 
 clean:
-	rm q1-orig q1
+	rm -f *.d *.o ${EXECS}
