Adding PRNG and cycle length test
- added PRNG code from uwaterloo student servers; it's a simple linear
  congruential generator.
- not wishing to blindly trust this random code, i decided to write a
  quick test of cycle length with the default seed using the handy
  tortoise-and-hare algorithm (space is constant, time is linear in
  cycle length.) result: 1211400191, so roughly 25% of the uint32_t
  space. probably good enough for these toy examples.
- added rule in the Makefile. another gotcha: by default, make runs the
  first rule found - there's nothing special about "all", and if you
  don't remember to put it first (or add something before it) you will
  be surprised.

--- a/a2/Makefile
+++ b/a2/Makefile
@@ -20,7 +20,7 @@ EXEC3=quicksort
 
 OBJECTS=${OBJECTS1} ${OBJECTS2} ${OBJECTS3}
 DEPENDS=${OBJECTS:.o=.d}
-EXECS=${EXEC1} ${EXEC3}
+EXECS=${EXEC1} ${EXEC3} prngtest
 
 all: ${EXECS}
 
@@ -52,9 +52,12 @@ endif
 ImplType :
 	echo "IMPLTYPE=${TYPE}" > ImplType
 
+prngtest:
+	g++ -o prngtest PRNGTest.cc
+
 ${OBJECTS} : ${MAKEFILE_NAME}
 
 -include ${DEPENDS}
 
 clean:
-	rm -f *.d *.o ${EXECS} interference ImplType
+	rm -f *.d *.o ${EXECS} interference ImplType prngtest
