Simplifying Makefile for a3
- another advantage of not having to do this in a course environment: i
  can get rid of those asinine Impl{Type,Kind} rules (and files) and
  build something sensible

--- a/a3/Makefile
+++ b/a3/Makefile
@@ -1,7 +1,3 @@
-KIND:=NOBUSY
-TYPE:=int
-SENTINEL:=-1
-
 UXX_ROOT=/home/fearlesstost/u++
 CXX=${UXX_ROOT}/bin/u++
 CXXFLAGS=-g -Wall -Werror -Wfatal-errors -Wno-unused-label -MMD -DTYPE="${TYPE}" -I${UXX_ROOT}/u++-5.7.0/inc -L${UXX_ROOT}/u++-5.7.0/lib
@@ -23,55 +19,17 @@ OBJECTS=${OBJECTS1} ${OBJECTS2}
 DEPENDS=${OBJECTS:.o=.d}
 EXECS=${EXEC1} ${EXEC2}
 
-all: ${EXECS} ImplKind ImplType
+all: ${EXECS}
 
--include ImplKind
-
-ifeq (${IMPLKIND},${KIND})
 ${EXEC1} : ${OBJECTS1}
 	${CXX} ${CXXFLAGS} $^ -o $@
-else
-ifeq (${KIND},)
-KIND=${IMPLKIND}
-${EXEC1} : ${OBJECTS1}
-	${CXX} ${CXXFLAGS} $^ -o $@
-else
-.PHONY : ${EXEC1}
-${EXEC1} :
-	rm -f ImplKind
-	touch q1buffer.h
-	${MAKE} ${EXEC1} KIND="${KIND}"
-endif
-endif
-
-ImplKind:
-	echo "IMPLKIND=${KIND}" > ImplKind
-
--include ImplType
-
-ifeq (${IMPLTYPE},${TYPE})
+ 
 ${EXEC2} : ${OBJECTS2}
 	${CXX} ${CXXFLAGS} $^ -o $@
-else
-ifeq (${TYPE},)
-TYPE=${IMPLTYPE}
-${EXEC2} : ${OBJECTS2}
-	${CXX} ${CXXFLAGS} $^ -o $@
-else
-.PHONY : ${EXEC2}
-${EXEC2} :
-	rm -f ImplType
-	touch q2buffer.h
-	${MAKE} ${EXEC2} TYPE="${TYPE}" SENTINEL="${SENTINEL}"
-endif
-endif
-
-ImplType :
-	echo "IMPLTYPE=${TYPE}" > ImplType
 
 ${OBJECTS} : ${MAKEFILE_NAME}
 
 -include ${DEPENDS}
 
 clean:
-	rm -f *.d *.o ${EXECS} ImplKind ImplType
+	rm -f *.d *.o ${EXECS} 
