Starting work on no-busywait implementation
- Moved BusyWaitBoundedBuffer to its own file, and started
  NoBusyWaitBoundedBuffer in a separate file.
- Added task names to Consumers and Producers. This helps enormously
  with debugging, as I can now see which tasks wait on which uCondLocks.
- Compile-time implementation switching sucks. A better solution here
  would probably have been to just create separate q1Main files,
  factor out the command-line argument parsing and task initialization
  elsewhere, and have those separate q1Mains be thin wrappers providing
  the typedef. I tried to create separate rules in the Makefile, but
  discovered that the -D flag has to be passed with the %.o : %.cc rule
  (which gets messy, IMHO.)

--- a/a3/Makefile
+++ b/a3/Makefile
@@ -1,12 +1,23 @@
 UXX_ROOT=/home/fearlesstost/u++
 CXX=${UXX_ROOT}/bin/u++
-CXXFLAGS=-g -Wall -Werror -Wfatal-errors -Wno-unused-label -MMD -DTYPE="${TYPE}" -I${UXX_ROOT}/u++-5.7.0/inc -L${UXX_ROOT}/u++-5.7.0/lib
+BUSY=BUSY
+NOBUSY=NOBUSY
+TYPEFLAGS=
+ifeq (${TYPE},${BUSY})
+  TYPEFLAGS=-DBUSY
+else
+ifeq (${TYPE},${NOBUSY})
+  TYPEFLAGS=-DNOBUSY
+endif
+endif
+   
+CXXFLAGS=-g -Wall -Werror -Wfatal-errors -Wno-unused-label -MMD ${TYPEFLAGS} -I${UXX_ROOT}/u++-5.7.0/inc -L${UXX_ROOT}/u++-5.7.0/lib
 MAKEFILE_NAME=${firstword ${MAKEFILE_LIST}}
 
 %.o : %.cc
 	${CXX} ${CXXFLAGS} -c $< -o $@
 
-OBJECTS1=BoundedBuffer.o Producer.o Consumer.o q1Main.o
+OBJECTS1=NoBusyWaitBoundedBuffer.o BusyWaitBoundedBuffer.o BoundedBuffer.o Producer.o Consumer.o q1Main.o
 EXEC1=buffer
 
 OBJECTS2=q2Main.o
