Implementation of EventCounter/Sequencer-based BoundedBuffer
- thanks to the templated Buffer type from before, adding another
  BoundedBuffer implementation is relatively easy :)
- added EventCounterLock, which wraps the EventCounter/Sequencer in
  acquire()/release() semantics; this may be somewhat misnamed, though,
  since the end result is essentially a semaphore.
- writing EventCounter was an interesting problem. i originally thought
  about trying to preserve the order of tickets, so that each task
  entering EventCounter with a ticket sometime in the future would
  create a semaphore that EventCounter would signal when that ticket is
  called. under this scheme, EventCounter would also need (e.g.) a
  minheap on ticket numbers.
- eventually, though, i realized that this could be handled neatly with
  a single semaphore, since V() guarantees round-robin unblocking for
  waiting P()s. when a ticket await()s, we check N == ticket -
  lastEvent_; if N > 0, the task tries to P() wait_ N times. when the
  counter is advance()d, we check to see if tasks are waiting on
  wait_.P(), and issue wait_.V() once per waiting task if there are any.
- this was nice and clean, but it had a subtle bug: between successive
  invocations of wait_.P() for a task waiting N > 1 times, that task is
  *not* waiting on wait_.P(), and so the V() count in advance would be
  too low! this eventually leads to deadlock. the solution was to add a
  second semaphore, numWaiting_, that we abuse as an atomic counter for
  how many tasks are waiting; this is V()'d before any of the
  wait_.P()s, and P()'d after all of them.
- note that advance(), await() use a binary semaphore synch_ to achieve
  atomic access of lastEvent_, numWaiting_, and wait_. this is
  important; otherwise, race conditions can cause mismatches between P()
  and V() on wait_, which leads to deadlock as mentioned before.
- i originally thought that the EventCounterLock would function more
  like a lock, and that this implemen

--- a/a3/Makefile
+++ b/a3/Makefile
@@ -20,7 +20,7 @@ MAKEFILE_NAME=${firstword ${MAKEFILE_LIST}}
 OBJECTS1=NoBusyWaitBoundedBuffer.o BusyWaitBoundedBuffer.o BoundedBuffer.o Producer.o Consumer.o q1Main.o
 EXEC1=buffer
 
-OBJECTS2=Sequencer.o EventCounter.o q2Main.o
+OBJECTS2=Sequencer.o EventCounter.o EventCounterBoundedBuffer.o q2Main.o
 EXEC2=eventcounter
 
 OBJECTS=${OBJECTS1} ${OBJECTS2}
